--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="header-subtitle">Váš inteligentní asistent</div>
             </div>
             <div class="header-buttons">
-                <button class="index-button" onclick="if(window.uiManager) window.uiManager.showWelcomeScreen()" title="Zpět na úvodní obrazovku">
-                    Index
+                <button class="index-button" onclick="if(window.uiManager) window.uiManager.showWelcomeScreen()" title="Znovu načíst chat">
+                    Reload
                 </button>
                 <!-- Výběr tématu -->
                 <div class="theme-selector-inline">
