--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My AI Chat | Váš inteligentní asistent</title>
+    <title>AI Chat Assistant</title>
     
     <!-- Styly -->
     <link rel="stylesheet" href="style.css">
