--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                     <button class="theme-btn theme-claude active" onclick="if(window.uiManager) window.uiManager.setTheme('claude')" title="Claude téma"></button>
                     <button class="theme-btn theme-google" onclick="if(window.uiManager) window.uiManager.setTheme('google')" title="Google téma"></button>
                     <button class="theme-btn theme-replit" onclick="if(window.uiManager) window.uiManager.setTheme('replit')" title="Tmavé téma"></button>
+                    <button class="theme-btn theme-carrd" onclick="if(window.uiManager) window.uiManager.setTheme('carrd')" title="Carrd téma"></button>
                 </div>
             </div>
         </div>
@@ -55,7 +56,7 @@
         <!-- PATIČKA -->
         <div class="app-footer">
             <div class="footer-content">
-                <span class="footer-text">Powered by <a href="http://melioro.cz" target="_blank" rel="noopener noreferrer" class="footer-link"><strong>MELIORO Systems</strong></a></span>
+                <span class="footer-text">Powered by <a href="http://melioro.cz" target="_blank" rel="noopener noreferrer" class="footer-link"><strong>MELIORO Systems</strong></a>. Návrat na stránky <a href="http://melioro.cz" target="_blank" rel="noopener noreferrer" class="footer-link"><strong>MELIORO</strong></a>.</span>
             </div>
         </div>
     </div>
